Begin production fornt end backend db